// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category component renders properly 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        aria-hidden="true"
        aria-labelledby="exampleModalLabel"
        class="modal fade"
        id="authModal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal-dialog-centered auth-modal"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            />
            <div
              class="modal-body"
            >
              <div
                class="dismiss-modal close"
                data-dismiss="modal"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <defs>
                    <path
                      d="M0 1.5L1.5 0 8 6.5 14.5 0 16 1.5 9.5 8l6.5 6.5-1.5 1.5L8 9.5 1.5 16 0 14.5 6.5 8z"
                      id="icon-close_svg__a"
                    />
                  </defs>
                  <use
                    transform="translate(4 4)"
                    xlink:href="#icon-close_svg__a"
                  />
                </svg>
              </div>
              <div
                class="bg-color auth-page"
              >
                <div
                  class=""
                >
                  <div
                    class="auth-wrapper pt-5"
                  >
                    <h2
                      class="text-center pt-4 mb-0 auth-title"
                    >
                      Log In
                    </h2>
                    <form
                      class="pb-3 form-auth"
                      name="form"
                    >
                      <div
                        class="form-title mb-4"
                      >
                        <span>
                          Type your email
                        </span>
                      </div>
                      <div
                        class="input-group-wrapper mt-9"
                      >
                        <div
                          class="input-slide text-center "
                        >
                          <div
                            class="form-group padding"
                          >
                            <input
                              accept=""
                              autocomplete="off"
                              class="default-input"
                              name="email"
                              placeholder="Email"
                              type="email"
                              value=""
                            />
                            <div
                              class="text-danger help-block"
                            />
                          </div>
                          <div
                            class="form-group padding"
                          >
                            <input
                              accept=""
                              autocomplete="off"
                              class="default-input"
                              name="password"
                              placeholder="Password"
                              type="password"
                              value=""
                            />
                            <div
                              class="text-danger help-block"
                            />
                          </div>
                        </div>
                        <div
                          aria-pressed="false"
                          class="col-lg-12 padding terms text-center"
                          role="button"
                          tabindex="0"
                        >
                          <p
                            class="link text-muted"
                          >
                            Forgot Password?
                          </p>
                        </div>
                      </div>
                      <div
                        class="padding"
                      >
                        <button
                          class="button col-md-12 primary-button mt-5"
                          data-dismiss=""
                          data-target=""
                          data-testid="button"
                          data-toggle=""
                          id="submit"
                          type="submit"
                        >
                          Log In
                        </button>
                      </div>
                      <div
                        class="divider-box mt-2 mb-2"
                      >
                        <div
                          class="divider"
                        >
                          <span>
                            or
                          </span>
                        </div>
                      </div>
                      <div
                        class="padding"
                      >
                        <button
                          class="facebk-btn col-md-12"
                          data-dismiss=""
                          data-target=""
                          data-testid="button"
                          data-toggle=""
                          id="aY-tiu0KU"
                          type="button"
                        >
                          Facebook
                        </button>
                      </div>
                      <div
                        class="form-options padding"
                      >
                        <p>
                          New to Bukka?
                        </p>
                        <button
                          class="btn-link auth-footer-btn"
                          data-dismiss=""
                          data-target=""
                          data-testid="button"
                          data-toggle=""
                          id="/signup"
                          type="button"
                        >
                          SIGN UP
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <nav
        class="container navbar navbar-light"
      >
        <div>
          <a
            class="bukka-brand"
            href="/"
          >
            <div
              class="bukka-logo"
            >
              <img
                alt=""
                src="https://res.cloudinary.com/digitzs/image/upload/v1550480450/Bukka%20App/bukka-logo.svg"
              />
            </div>
          </a>
        </div>
      </nav>
    </div>
    <div
      class="bg-color not-available-page"
    >
      <div
        class="container "
      >
        <h1
          class="text-title-unavailable"
        >
          Mybuka Not
          <br />
          Available In Your
          <br />
          Location
          <br />
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category component renders properly 2`] = `
<div>
  <div
    class="container-fluid p-0"
  >
    <div>
      <div
        class="intro-navbar-area"
      >
        <div
          class="container"
        >
          <div
            aria-hidden="true"
            aria-labelledby="exampleModalLabel"
            class="modal fade"
            id="authModal"
            role="dialog"
            tabindex="-1"
          >
            <div
              class="modal-dialog modal-dialog-centered auth-modal"
              role="document"
            >
              <div
                class="modal-content"
              >
                <div
                  class="modal-header"
                />
                <div
                  class="modal-body"
                >
                  <div
                    class="dismiss-modal close"
                    data-dismiss="modal"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <defs>
                        <path
                          d="M0 1.5L1.5 0 8 6.5 14.5 0 16 1.5 9.5 8l6.5 6.5-1.5 1.5L8 9.5 1.5 16 0 14.5 6.5 8z"
                          id="icon-close_svg__a"
                        />
                      </defs>
                      <use
                        transform="translate(4 4)"
                        xlink:href="#icon-close_svg__a"
                      />
                    </svg>
                  </div>
                  <div
                    class="bg-color auth-page"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="auth-wrapper pt-5"
                      >
                        <h2
                          class="text-center pt-4 mb-0 auth-title"
                        >
                          Log In
                        </h2>
                        <form
                          class="pb-3 form-auth"
                          name="form"
                        >
                          <div
                            class="form-title mb-4"
                          >
                            <span>
                              Type your email
                            </span>
                          </div>
                          <div
                            class="input-group-wrapper mt-9"
                          >
                            <div
                              class="input-slide text-center "
                            >
                              <div
                                class="form-group padding"
                              >
                                <input
                                  accept=""
                                  autocomplete="off"
                                  class="default-input"
                                  name="email"
                                  placeholder="Email"
                                  type="email"
                                  value=""
                                />
                                <div
                                  class="text-danger help-block"
                                />
                              </div>
                              <div
                                class="form-group padding"
                              >
                                <input
                                  accept=""
                                  autocomplete="off"
                                  class="default-input"
                                  name="password"
                                  placeholder="Password"
                                  type="password"
                                  value=""
                                />
                                <div
                                  class="text-danger help-block"
                                />
                              </div>
                            </div>
                            <div
                              aria-pressed="false"
                              class="col-lg-12 padding terms text-center"
                              role="button"
                              tabindex="0"
                            >
                              <p
                                class="link text-muted"
                              >
                                Forgot Password?
                              </p>
                            </div>
                          </div>
                          <div
                            class="padding"
                          >
                            <button
                              class="button col-md-12 primary-button mt-5"
                              data-dismiss=""
                              data-target=""
                              data-testid="button"
                              data-toggle=""
                              id="submit"
                              type="submit"
                            >
                              Log In
                            </button>
                          </div>
                          <div
                            class="divider-box mt-2 mb-2"
                          >
                            <div
                              class="divider"
                            >
                              <span>
                                or
                              </span>
                            </div>
                          </div>
                          <div
                            class="padding"
                          >
                            <button
                              class="facebk-btn col-md-12"
                              data-dismiss=""
                              data-target=""
                              data-testid="button"
                              data-toggle=""
                              id="aY-tiu0KU"
                              type="button"
                            >
                              Facebook
                            </button>
                          </div>
                          <div
                            class="form-options padding"
                          >
                            <p>
                              New to Bukka?
                            </p>
                            <button
                              class="btn-link auth-footer-btn"
                              data-dismiss=""
                              data-target=""
                              data-testid="button"
                              data-toggle=""
                              id="/signup"
                              type="button"
                            >
                              SIGN UP
                            </button>
                          </div>
                        </form>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <nav
          class="container navbar navbar-light"
        >
          <div
            class="row mx-0"
          >
            <div>
              <a
                class="bukka-brand"
                href="/"
              >
                <div
                  class="bukka-logo"
                >
                  <img
                    alt=""
                    src="https://res.cloudinary.com/digitzs/image/upload/v1550480450/Bukka%20App/bukka-logo.svg"
                  />
                </div>
              </a>
            </div>
            <div
              class="pl-lg-5
            d-none d-md-none d-lg-inline-flex"
            >
              <div
                class="pr-17"
              >
                <div
                  class="position-relative"
                >
                  <div>
                    <button
                      class="current-location-button inherit-bg"
                      data-dismiss=""
                      data-target=""
                      data-testid="button"
                      data-toggle=""
                      id="aY-tiu0KU"
                      type="button"
                    >
                      <span
                        class="current-location-button-icon custom-mt-minus19"
                      >
                        <svg
                          class="magnifier"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <defs>
                            <path
                              d="M11.75 10.335l3.32 3.322-1.413 1.414-3.322-3.32A6.48 6.48 0 0 1 6.5 13a6.5 6.5 0 1 1 5.25-2.665zM6.5 11a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9z"
                              id="icon-search_svg__a"
                            />
                          </defs>
                          <use
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity=".9"
                            xlink:href="#icon-search_svg__a"
                          />
                        </svg>
                      </span>
                      <div>
                        <div
                          class="current-location-button-text"
                        >
                          <input
                            accept=""
                            autocomplete="searchanything"
                            class="searchanything-text-field inherit-bg searchlocation"
                            name="searchLocation"
                            placeholder="Search for anything..."
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-inline"
          >
            <div
              class="d-none bukka-md-inline-flex"
            >
              <a
                class="bukka-btn"
                href="/feed"
              >
                Food
              </a>
              <a
                class="bukka-btn"
                href="/fresh"
              >
                Fresh
              </a>
              <a
                class="bukka-btn"
                href="/drinks"
              >
                Drinks
              </a>
            </div>
            <button
              class="small-outline-button bg-transparent"
              data-dismiss=""
              data-target="#authModal"
              data-testid="button"
              data-toggle="modal"
              id="/login"
              type="button"
            >
              sign in
            </button>
            <button
              class="small-button mr-0"
              data-dismiss=""
              data-target="#authModal"
              data-testid="button"
              data-toggle="modal"
              id="/signup"
              type="button"
            >
              sign up
            </button>
          </div>
        </nav>
      </div>
      <section
        class="feed-main-section pt-5"
      >
        <div
          class="container "
        >
          <h2
            class="pt-100 px-15 capitalize"
          >
            Fast food
          </h2>
        </div>
        <div
          class="border-top"
        />
        <div
          class="container "
        >
          <div
            class="mt-4 mb-4"
          >
            hehehee
            
            
            <div
              class="container "
            >
              <div
                class="row pb-4"
              >
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595380/bukka-favorite-7.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595380/bukka-favorite-7.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            miss saigon
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595379/bukka-favorite-5.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595379/bukka-favorite-5.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            popsons
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595379/bukka-favorite-6.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595379/bukka-favorite-6.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            the new spot on pork
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595380/bukka-favorite-8.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595380/bukka-favorite-8.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            chaat corner
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595379/bukka-favorite-1.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595379/bukka-favorite-1.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            fresh roll
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595379/bukka-favorite-2.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595379/bukka-favorite-2.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            jack in the box
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595380/bukka-favorite-3.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595380/bukka-favorite-3.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            ike's love and sandwishes
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card-container col-lg-4 col-md-4 col-sm-12"
                >
                  <div
                    class="card-wrap"
                  >
                    
                    <div
                      class="mt-4 bukka-card"
                      data-target="#mealModal"
                      data-toggle="modal"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="alt_image"
                        class="img-small-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_320,h_320/v1554595380/bukka-favorite-4.webp"
                      />
                      <img
                        alt="alt_image"
                        class="img-large-screen bukka-img img-height"
                        src="https://res.cloudinary.com/deqt3envc/image/upload/c_scale,w_640,h_640/v1554595380/bukka-favorite-4.webp"
                      />
                      <div
                        class="details"
                      >
                        <h3>
                          <span
                            class="details-location"
                          >
                            Urban pizza kitchen
                          </span>
                        </h3>
                        <div
                          class="delivery"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;
